Implemented a simple version of the /ifyoulike endpoint.