@@ -1,8 +1,18 @@
-FROM openjdk:14-alpine
+FROM maven:3.6-jdk-14 AS builder
 
 WORKDIR build/
 
-COPY target/*.jar ./app.jar
+COPY pom.xml ./
+COPY ./src ./src
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+RUN ["mvn", "clean", "package", "spring-boot:repackage"]
 
+RUN ls
+
+FROM openjdk:14-alpine
+
+WORKDIR app/
+
+COPY --from=builder /build/target/*.jar ./app.jar
+
+CMD ["java", "--enable-preview", "-jar", "app.jar"]
